promplus/envoy-cfg.json
{
    "static_resources":{
      "listeners":[
        {
          "address":{
            "socket_address":{
              "address":"0.0.0.0",
              "port_value":9900
            }
          },
          "filter_chains":{
            "filters":[
              {
                "name":"envoy.http_connection_manager",
                "config":{
                  "stat_prefix":"ingress_http",
                  "http_filters":[
                    {
                      "name":"envoy.router",
                      "config":{

                      }
                    }
                  ],
                  "route_config":{
                    "virtual_hosts":[
                      {
                        "name":"comms",
                        "domains":"*",
                        "routes":[
                          {
                            "route":{
                              "cluster":"local"
                            },
                            "match":{
                              "prefix":"/"
                            }
                          }
                        ]
                      }
                    ]
                  }
                }
              }
            ]
          }
        }
      ],
      "clusters":[
        {
          "name":"local",
          "type":"STRICT_DNS",
          "connect_timeout":"30s",
          "hosts":[
            {
              "socket_address":{
                "address":"127.0.0.1",
                "port_value":9080
              }
            }
          ]
        }
      ]
    }
}
